# pygit-bulk

./: .coveragerc  .mypy.ini  .travis.yml  AddGithubMembers.py  AddRepoMembers.py  AddStaffToTeams.py  AddTeamMembers.py  CopyFileByLanguage.py  CountGithubForks.py  CountGithubStars.py  CountStars.py  CreateGithubTeamRepos.py  DuplicateGithubRepos.py  ListGithubCollab.py  ListNonArchived.py  ListNonLicensed.py  ListNonTeamRepos.py  ListUserGithubRepos.py  PlotCommits.py  README.md  RemoveCollaborators.py  SecurityAlert.py  SetArchive.py  SetPrivate.py  SetVulnSecAlerts.py  Unwatch.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
Github/: AddOrganizationMembers.py  AddRepoMembers.py  AddStaffToTeams.py  AddTeamMembers.py  CopyFileByLanguage.py  CountGithubForks.py  CountGithubStars.py  CountStars.py  CreateGithubTeamRepos.py  DuplicateGithubRepos.py  ListGithubCollab.py  ListNonArchived.py  ListNonLicensed.py  ListNonTeamRepos.py  ListRepos.py  PlotCommits.py  RemoveCollaborators.py  SecurityAlert.py  SetArchive.py  SetPrivate.py  Unwatch.py
Gitlab/: ListRepos.py
examples/: ci_python.yml
gitedu/: get.py  github_duplicator.py
pygithubutils/: base.py  duplicator.py  get.py  repo_stats.py
src/gitbulk/: __init__.py  base.py  duplicator.py  get.py  gitlab.py  repo_stats.py
src/gitbulk/tests/: test_github.py
src/pygithubutils/: __init__.py  base.py
src/pygithubutils/tests/: test_github.py
tests/: test_github.py
