[metadata]
name = gitedu
version = 0.8.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Manage large (100+) user teams for classroom and insitutions with GitHub API calls.
url = https://github.com/scivision/gitedu
keywords =
  git
  GitHub
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  AddGithubMembers.py
  CreateGithubTeamRepos.py
  DuplicateGithubRepos.py
  ListGithubCollab.py
install_requires =
  pygithub
  pandas
  gitutils >= 1.1.5

[options.extras_require]
tests =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

[options.entry_points]
console_scripts =
