[metadata]
name = gitbulk
version = 1.2.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Manage user teams for classroom and insitutions with Git remote API calls.
url = https://github.com/scivision/pygit-bulk
keywords =
  git
  GitHub
  GitLab
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Version Control :: Git
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = false
install_requires =
  pygithub >= 1.53
  pandas
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
